# rust-terminal

./: Cargo.toml  LICENSE  README.md
alacritty/: Cargo.toml
alacritty/font/src/: lib.rs
alacritty/font/src/darwin/: mod.rs
alacritty/font/src/ft/: mod.rs
alacritty/src/: ansi.rs  cli.rs  config.rs  display.rs  event.rs  event_loop.rs  window.rs
alacritty/src/renderer/: mod.rs
alacritty/src/term/: mod.rs
alacritty/src/tty/: mod.rs
alacritty/winpty/: Cargo.toml
src/: main.rs  mainview.rs
