[package]
name = "galacritty"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Terminal", "Console", "GTK" ]
description = "GTK 3 terminal emulator based on the GPU-accelerated Alacritty core"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/galacritty"
repository = "https://github.com/myfreeweb/galacritty"
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
glib = "0.14.8"
gio = "0.14.8"
gdk = "0.14.3"
pango = "0.14.8"
gtk = "0.14.3"
epoxy = "0.1.0"
shared_library = "0.1.9"
alacritty = { path = "alacritty" }

[patch.crates-io]
servo-freetype-sys = { path = "alacritty/servo-freetype-proxy" }
