[package]
name = "rust-terminal"
version = "0.0.0"
authors = [ "taony.zeng@gmail.com" ]
keywords = [ "Terminal", "Console", "GTK" ]
description = "GTK 3 terminal emulator"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/taonyzeng/rust-terminal"
repository = "https://github.com/taonyzeng/rust-terminal"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.5"
glib = "0.6"
gio = "0.5"
gdk = "0.9"
pango = "0.5"
gtk = { version = "0.5", features = ["v3_16"] }
epoxy = "0.1"
shared_library = "0"
alacritty = { path = "alacritty" }

[patch.crates-io]
servo-freetype-sys = { path = "alacritty/servo-freetype-proxy" }
