[package]
name = "alacritty"
version = "0.2.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
build = "build.rs"
description = "GPU-accelerated terminal emulator"
readme = "README.md"
homepage = "https://github.com/jwilm/alacritty"

[workspace]
members = [
    "font",
    "copypasta",
    "winpty"
]

[[bin]]
name = "alacritty"
doc = false

[dependencies]
libloading = "0.7.2"
libc = "0.2.108"
cgmath = "0.18.0"
notify = "4.0.17"
bitflags = "1.3.2"
font = { path = "./font" }
errno = "0.2.8"
parking_lot = "0.11.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
vte = "0.10.1"
mio = "0.8.0"
mio-more = "0.1.0"
copypasta = { path = "./copypasta" }
xdg = "2.4.0"
log = "0.4.14"
clap = "2.34.0"
fnv = "1.0.7"
unicode-width = "0.1.9"
arraydeque = "0.4.5"
glutin = "0.27.0"
env_logger = "0.9.0"
base64 = "0.13.0"
winit = "0.25.0"
image = "0.23.14"
static_assertions = "1.1.0"
terminfo = "0.7.3"
url = "2.2.2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd"))'.dependencies]
x11-dl = "2.19.1"

[target.'cfg(windows)'.dependencies]
winpty = { path = "./winpty" }
mio-named-pipes = "0.1.7"
winapi = { version = "0.3.9", features = ["winuser", "synchapi", "roerrorapi", "winerror"] }
dunce = "1.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
dirs = "4.0.0"

[features]
default = []
# Enabling this feature makes shaders automatically reload when changed
live-shader-reload = []
nightly = []
bench = []

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6.5"
reqwest = "0.11.7"
tempdir = "0.3.7"
zip = "0.5.13"

[profile.release]
lto = true
debug = 1

[package.metadata.deb]
maintainer = "Joe Wilm <joe@jwilm.com>"
license-file = ["LICENSE-APACHE", "3"]
extended-description = """\
Alacritty is the fastest terminal emulator in existence. Using the GPU for \
rendering enables optimizations that simply aren't possible in other emulators. \
Alacritty currently supports FreeBSD, Linux, macOS, and OpenBSD. Windows \
support is planned before the 1.0 release.  """
depends = "$auto, cmake, libfreetype6-dev, libfontconfig1-dev, xclip"
section = "rust"
priority = "optional"
assets = [
    ["target/release/alacritty", "usr/local/bin/", "755"],
    ["alacritty.desktop", "usr/share/applications/", "644"],
    ["alacritty-completions.bash", "usr/share/bash-completion/completions/alacritty", "644"],
    ["alacritty-completions.fish", "usr/share/fish/completions/alacritty.fish", "644"],
    ["alacritty-completions.zsh", "usr/share/zsh/vendor-completions/_alacritty", "644"],
    ["alacritty.info", "usr/share/terminfo/a/alacritty", "644"],
]

[patch.crates-io]
servo-freetype-sys = { path = "servo-freetype-proxy" }
